--- a/app/views/media_entries/_show/_base.haml
+++ b/app/views/media_entries/_show/_base.haml
@@ -3,8 +3,12 @@
     content_for(:top_notice) { render('media_entries/_show/unpublished_header') }
   end
 
-  content_for(:header) { render('media_entries/_show/resource_header') }
+  unless content_for?(:header)
+    content_for(:header) { render('media_entries/_show/resource_header') }
+  end
 
-  content_for(:tabs) { render('media_entries/_show/tab_nav') }
+  unless content_for(:tabs)
+    content_for(:tabs) { render('media_entries/_show/tab_nav') }
+  end
 
 = render template: 'layouts/app_resource'
