--- a/app/views/application/_navigation.html.haml
+++ b/app/views/application/_navigation.html.haml
@@ -14,6 +14,4 @@
     - unless @app_settings.support_url.blank?
       %li.ui-tabs-item
         %a#to-help{:href => @app_settings.support_url, :target => "_blank"}
-          %i.icon-nav-help
-          %span.hide-text
-            = _("Help")
+          = "Support"
