css: fix <span> reset

--- a/app/assets/stylesheets/components/_ui-slider.sass
+++ b/app/assets/stylesheets/components/_ui-slider.sass
@@ -13,6 +13,7 @@
 
 .ui-slider-handle
   @extend .primary-button
+  font-weight: normal
   +border-radius(100px)
   +dimension($space-s, $space-s)
   +position-top-left(0, 20px)
