--- a/app/views/styleguide/09_Past Spec/_1_set-vocabulary.html.haml
+++ b/app/views/styleguide/09_Past Spec/_1_set-vocabulary.html.haml
@@ -67,7 +67,7 @@
               .ui-metadata-box.prl.mbm
                 %h3.title-s-alt.separated.light.mbx
                   Landschaftstyp
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Naturlandschaft"}
@@ -99,7 +99,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Farbe
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Oker"}
@@ -135,7 +135,7 @@
               .ui-metadata-box.prl.mbm
                 .h3.title-s-alt.separated.light.mbx
                   Verwendungszweck
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Ausstellung"}
@@ -158,7 +158,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Wetter/Klima
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Bewölkung/wolkig"}
@@ -170,7 +170,7 @@
               .ui-metadata-box.prl.mbm
                 %h3.title-s-alt.separated.light.mbx
                   Bildzeit
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Frühling"}
@@ -193,7 +193,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Bildwirkung
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "idyllisch"}
@@ -226,7 +226,7 @@
               .ui-metadata-box.prl.mbm
                 %h3.title-s-alt.separated.light.mbx
                   Farbe
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Oker"}
@@ -243,7 +243,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Genre
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Objekt"}
@@ -319,7 +319,7 @@
               .ui-metadata-box.prl.mbm
                 %h3.title-s-alt.separated.light.mbx
                   Landschaftstyp
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Naturlandschaft"}
@@ -351,7 +351,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Farbe
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Oker"}
@@ -387,7 +387,7 @@
               .ui-metadata-box.prl.mbm
                 .h3.title-s-alt.separated.light.mbx
                   Verwendungszweck
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Ausstellung"}
@@ -410,7 +410,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Wetter/Klima
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Bewölkung/wolkig"}
@@ -422,7 +422,7 @@
               .ui-metadata-box.prl.mbm
                 %h3.title-s-alt.separated.light.mbx
                   Bildzeit
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Frühling"}
@@ -445,7 +445,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Bildwirkung
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "idyllisch"}
@@ -478,7 +478,7 @@
               .ui-metadata-box.prl.mbm
                 %h3.title-s-alt.separated.light.mbx
                   Farbe
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Oker"}
@@ -495,7 +495,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Genre
-                  %span.title-xs-alt.mlx (a-z)
+                  %small.title-xs-alt.mlx (a-z)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Objekt"}
@@ -571,7 +571,7 @@
               .ui-metadata-box.prl.mbm
                 %h3.title-s-alt.separated.light.mbx
                   Landschaftstyp
-                  %span.title-xs-alt.mlx (rank)
+                  %small.title-xs-alt.mlx (rank)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Naturlandschaft"}
@@ -591,7 +591,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Farbe
-                  %span.title-xs-alt.mlx (rank)
+                  %small.title-xs-alt.mlx (rank)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Oker"}
@@ -612,7 +612,7 @@
               .ui-metadata-box.prl.mbm
                 .h3.title-s-alt.separated.light.mbx
                   Verwendungszweck
-                  %span.title-xs-alt.mlx (rank)
+                  %small.title-xs-alt.mlx (rank)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Ausstellung"}
@@ -626,7 +626,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Wetter/Klima
-                  %span.title-xs-alt.mlx (rank)
+                  %small.title-xs-alt.mlx (rank)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Bewölkung/wolkig"}
@@ -638,7 +638,7 @@
               .ui-metadata-box.prl.mbm
                 %h3.title-s-alt.separated.light.mbx
                   Bildzeit
-                  %span.title-xs-alt.mlx (rank)
+                  %small.title-xs-alt.mlx (rank)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Frühling"}
@@ -649,7 +649,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Bildwirkung
-                  %span.title-xs-alt.mlx (rank)
+                  %small.title-xs-alt.mlx (rank)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "idyllisch"}
@@ -667,7 +667,7 @@
               .ui-metadata-box.prl.mbm
                 %h3.title-s-alt.separated.light.mbx
                   Farbe
-                  %span.title-xs-alt.mlx (rank)
+                  %small.title-xs-alt.mlx (rank)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Oker"}
@@ -678,7 +678,7 @@
               .ui-metadata-box.prl
                 %h3.title-s-alt.separated.light.mbx
                   Genre
-                  %span.title-xs-alt.mlx (rank)
+                  %small.title-xs-alt.mlx (rank)
                 %ul.ui-tag-cloud.small.ellipsed.compact
                   %li.ui-tag-cloud-item
                     %a.ui-tag-button{:title => "Objekt"}
