--- a/app/views/styleguide/09_Past Spec/_2_context-page.html.haml
+++ b/app/views/styleguide/09_Past Spec/_2_context-page.html.haml
@@ -48,7 +48,7 @@
                 .ui-metadata-box.prl.mbm
                   %h3.title-s-alt.separated.light.mbx
                     Landschaftstyp
-                    %span.title-xs-alt.mlx (a-z)
+                    %small.title-xs-alt.mlx (a-z)
                   %ul.ui-tag-cloud.small.ellipsed.compact
                     %li.ui-tag-cloud-item
                       %a.ui-tag-button{:title => "Naturlandschaft"}
@@ -80,7 +80,7 @@
                 .ui-metadata-box.prl
                   %h3.title-s-alt.separated.light.mbx
                     Farbe
-                    %span.title-xs-alt.mlx (a-z)
+                    %small.title-xs-alt.mlx (a-z)
                   %ul.ui-tag-cloud.small.ellipsed.compact
                     %li.ui-tag-cloud-item
                       %a.ui-tag-button{:title => "Oker"}
@@ -116,7 +116,7 @@
                 .ui-metadata-box.prl.mbm
                   .h3.title-s-alt.separated.light.mbx
                     Verwendungszweck
-                    %span.title-xs-alt.mlx (a-z)
+                    %small.title-xs-alt.mlx (a-z)
                   %ul.ui-tag-cloud.small.ellipsed.compact
                     %li.ui-tag-cloud-item
                       %a.ui-tag-button{:title => "Ausstellung"}
@@ -139,7 +139,7 @@
                 .ui-metadata-box.prl
                   %h3.title-s-alt.separated.light.mbx
                     Wetter/Klima
-                    %span.title-xs-alt.mlx (a-z)
+                    %small.title-xs-alt.mlx (a-z)
                   %ul.ui-tag-cloud.small.ellipsed.compact
                     %li.ui-tag-cloud-item
                       %a.ui-tag-button{:title => "Bewölkung/wolkig"}
@@ -151,7 +151,7 @@
                 .ui-metadata-box.prl.mbm
                   %h3.title-s-alt.separated.light.mbx
                     Bildzeit
-                    %span.title-xs-alt.mlx (a-z)
+                    %small.title-xs-alt.mlx (a-z)
                   %ul.ui-tag-cloud.small.ellipsed.compact
                     %li.ui-tag-cloud-item
                       %a.ui-tag-button{:title => "Frühling"}
@@ -174,7 +174,7 @@
                 .ui-metadata-box.prl
                   %h3.title-s-alt.separated.light.mbx
                     Bildwirkung
-                    %span.title-xs-alt.mlx (a-z)
+                    %small.title-xs-alt.mlx (a-z)
                   %ul.ui-tag-cloud.small.ellipsed.compact
                     %li.ui-tag-cloud-item
                       %a.ui-tag-button{:title => "idyllisch"}
@@ -207,7 +207,7 @@
                 .ui-metadata-box.prl.mbm
                   %h3.title-s-alt.separated.light.mbx
                     Farbe
-                    %span.title-xs-alt.mlx (a-z)
+                    %small.title-xs-alt.mlx (a-z)
                   %ul.ui-tag-cloud.small.ellipsed.compact
                     %li.ui-tag-cloud-item
                       %a.ui-tag-button{:title => "Oker"}
@@ -224,7 +224,7 @@
                 .ui-metadata-box.prl
                   %h3.title-s-alt.separated.light.mbx
                     Genre
-                    %span.title-xs-alt.mlx (a-z)
+                    %small.title-xs-alt.mlx (a-z)
                   %ul.ui-tag-cloud.small.ellipsed.compact
                     %li.ui-tag-cloud-item
                       %a.ui-tag-button{:title => "Objekt"}
