MediaEntry-MetaData edit form
- completely built with React (js templates)
- renders static HTML as fallback
- uses default browser form-submit
- prog. enhanced InputMetaDatum, People multi-select
- working client-side models for MediaEntry + -MetaData implemented but not used yet

[finishes #101124810]

--- a/app/views/media_entries/_show/_resource_header.haml
+++ b/app/views/media_entries/_show/_resource_header.haml
@@ -1,10 +1,14 @@
 :ruby
   action_buttons = [
     component('button',
-      link: media_entry_path,
-      icon: :trash,
-      method: :delete,
-      data: { confirm: 'Are you sure you want to delete this?' })
+      link: edit_meta_data_media_entry_path,
+      icon: :pen),
+  component('button',
+    link: media_entry_path,
+    icon: :trash,
+    method: :delete,
+    data: { confirm: 'Are you sure you want to delete this?' })
+
   ]
 
 = component('page-header',
