--- a/app/views/my/_section_filter_demo.html.haml
+++ b/app/views/my/_section_filter_demo.html.haml
@@ -61,7 +61,7 @@
   end
 
   the_presenter = \
-    Presenters::Shared::MediaResources::MediaResources.new \
+    Presenters::MediaResources::MediaResources.new \
       current_user,
       media_resources: mr,
       page: params[:page],
